--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -61,6 +61,7 @@
                 android:layout_marginStart="20dp"
                 android:background=" #00555555"
                 android:text="park"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -87,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="type"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -113,6 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="full"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -139,6 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="fulltktamount"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -166,6 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="HalfTicket"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -193,6 +198,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
                 android:text="halfAmount"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -219,6 +225,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="total"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -245,6 +252,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="date"
+                android:padding="5dp"
                 android:textColor="#FFFFFF"
                 android:textSize="17dp"
                 android:textStyle="bold" />
@@ -282,6 +290,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/d_btn_reg"
                 android:text="@string/t_DeleteBtn"
+
+                android:textAlignment="center"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
         </LinearLayout>
