create validation and modified interfaces and create rates tables

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/s_date"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_layout"
@@ -13,14 +14,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="20dp"
         android:fontFamily="@font/aclonica"
         android:paddingBottom="20dp"
         android:text="@string/t_topic"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/tk_check_rate"
+        app:layout_constraintEnd_toStartOf="@+id/s_check_rate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,12 +29,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:textColor="@color/white"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="30dp"
         android:entries="@array/s_place"
         android:foreground="@drawable/s_input"
         android:padding="10dp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_booktopic" />
@@ -83,23 +83,41 @@
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/s_4input"
+        app:layout_constraintEnd_toEndOf="@+id/s_6input"
         app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="@+id/s_4input"
+        app:layout_constraintStart_toStartOf="@+id/s_6input"
         app:layout_constraintTop_toBottomOf="@+id/s_6input" />
 
-    <EditText
-        android:id="@+id/s_date"
+    <Button
+        android:id="@+id/s_bookBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/s_input"
+        android:background="@drawable/s_btn"
+        android:padding="10dp"
+        android:text="@string/s_bookingBtn"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/ss_date"
+        app:layout_constraintStart_toStartOf="@+id/ss_date"
+        app:layout_constraintTop_toBottomOf="@+id/ss_date" />
+
+    <EditText
+        android:id="@+id/ss_date"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/d_input_bg"
         android:drawableRight="@drawable/s_ic_baseline_calendar_today_24"
         android:ems="10"
-        android:hint="@string/s_date"
+        android:hint="@string/t_date"
         android:inputType="date"
-        android:padding="10dp"
-        android:paddingEnd="20dp"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/s_8input"
@@ -107,21 +125,7 @@
         app:layout_constraintTop_toBottomOf="@+id/s_8input" />
 
     <Button
-        android:id="@+id/s_bookBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/s_btn"
-        android:padding="10dp"
-        android:text="@string/s_bookingBtn"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/s_date"
-        app:layout_constraintStart_toStartOf="@+id/s_date"
-        app:layout_constraintTop_toBottomOf="@+id/s_date" />
-    <Button
-        android:id="@+id/tk_check_rate"
+        android:id="@+id/s_check_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
