--- a/app/src/main/res/layout/safari.xml
+++ b/app/src/main/res/layout/safari.xml
@@ -40,9 +40,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="85dp"
+                android:layout_marginEnd="96dp"
                 android:padding="5dp"
-                android:text="Park"
+                android:text="@string/list_park"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="4 Seat vehicle"
+                android:text="@string/list_4seat"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="6 seat vehicle"
+                android:text="@string/list_6seat"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -121,7 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="8 seat vehicle"
+                android:text="@string/list_8seat"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -151,9 +151,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="30dp"
+                android:layout_marginEnd="32dp"
                 android:padding="5dp"
-                android:text="Total vehicle"
+                android:text="@string/list_tot_vehi"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -177,7 +177,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="52dp"
+                android:layout_marginEnd="65dp"
                 android:padding="5dp"
                 android:text="Amount"
                 android:textColor="#FFFFFF"
@@ -204,7 +204,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="102dp"
+                android:layout_marginEnd="115dp"
                 android:padding="5dp"
                 android:text="Date"
                 android:textColor="#FFFFFF"
@@ -250,7 +250,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/s_btn"
-                android:text="@string/t_DeleteBtn"
+                android:text="@string/s_delete"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
         </LinearLayout>
